Fixed typo, refreshed icons and implemented loading screen on logout.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <!-- Title -->
-        <title>Swizzle Application</title>
+        <title>Swizle Application</title>
 
         <!-- Meta -->
         <meta charset="utf-8" />
@@ -27,7 +27,7 @@
                     This application requires Javascript to be enabled to run
                 </div>
                 <div class="no-script-details">
-                    If you have questions please contact at <a href="mailto:help@swizzle.com">help@swizzle.com</a>
+                    If you have questions please contact at <a href="mailto:help@swizle.com">help@swizzle.com</a>
                 </div>
             </div>
         </noscript>
